fix alt img, contrast color

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   --highlight-border-radius: 7px;
   --border-radius: 11px;
   --yellow-highlight: #fffab7;
-  --links: #0f6dff;
+  --links: #00358A;
   --background-body: #fff;
   --background-main: #f1f1f1;
   --background-inputs: #fcfcfc;
